# index-base

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Version.cmake  annotated.html  annotated_dup.js  classes.html  conanfile.py  dir_610022c9a8b8293c6e6716c80d75327f.html  dir_610022c9a8b8293c6e6716c80d75327f.js  files.html  files_dup.js  inba_8hpp.html  inba_8hpp.js  index.html  md_examples.html  md_release_notes.html  navtreedata.js  navtreeindex0.js  pages.html  structinba_1_1_indexed-members.html  structinba_1_1_indexed.html  structinba_1_1_indexed.js  structinba_1_1cnttp_1_1_create_indexed_helper-members.html  structinba_1_1cnttp_1_1_create_indexed_helper.html  structinba_1_1cnttp_1_1_diff_type_helper-members.html  structinba_1_1cnttp_1_1_diff_type_helper.html  structinba_1_1cnttp_1_1_diff_type_helper.js  structinba_1_1traits_1_1get__as__signed__type-members.html  structinba_1_1traits_1_1get__as__signed__type.html  structinba_1_1traits_1_1get__as__signed__type.js  version.hpp.in
cmake/: doFindDoxygen.cmake  inbaDoFindGit.cmake  inbaDoFindGympl.cmake  inbaUpdateVersion.cmake  updateVersion.cmake
docs/: CMakeLists.txt  Doxyfile.in  examples.md  index.md  release_notes.md
include/inba/: inba.hpp  version.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: CMakeLists.txt  basicCompiletimeTests.cpp  basicRuntimeTests.cpp  bi.cpp  bi.hpp  example.cpp  hello-index-base.cpp  implTraits.cpp  outputCompilerInfo.hpp  outputConfiguration.hpp  ranges.cpp  testing.hpp  traits.cpp
